# gburn

./: .gitignore  Cargo.toml  README.md  demo.tape  package.json  tsconfig.json
.github/workflows/: npm-publish.yml  release.yml
docs/: gburn.tape
scripts/: install.mjs  postbuild-bin.mjs  render-demo-svg.mjs
src/: demo.rs  demo.ts  estimator.rs  estimator.ts  format.rs  format.ts  index.ts  main.rs  pricing.rs  pricing.ts  report.rs  scanner.rs  scanner.ts  tui.ts
src/tui/: app.rs  hit.rs  mod.rs  ui.rs
