[package]
name = "gburn"
version = "2.0.0"
edition = "2021"
description = "Grok Build session token burn at public API list prices — fullscreen TUI"
license = "MIT"
authors = ["wiktorekdev"]
repository = "https://github.com/wiktorekdev/gburn"
readme = "README.md"
keywords = ["grok", "xai", "tokens", "cost", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "gburn"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
dirs = "6"
percent-encoding = "2"
ratatui = "0.29"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
